-fix problems in popular tags and add some stuff

--- a/src/app/shared/modules/feed-toggler/components/feed-toggler/feed-toggler.component.html
+++ b/src/app/shared/modules/feed-toggler/components/feed-toggler/feed-toggler.component.html
@@ -3,7 +3,7 @@
     <li class="nav-item" *ngIf="(isLoggedIn$|async)">
       <a
         class="nav-link"
-        [routerLink]="['/feed']"
+        [routerLink]="['/home/feed']"
         routerLinkActive="active">
         Your Feed
       </a>
@@ -11,8 +11,9 @@
     <li class="nav-item">
       <a
         class="nav-link"
-        [routerLink]="['/']"
-        routerLinkActive="active">
+        [routerLink]="['/home']"
+        routerLinkActive="active"
+        [routerLinkActiveOptions]="{exact:true}">
         Global Feed
       </a>
     </li>
