--- a/src/app/your-feed/components/your-feed/your-feed.component.html
+++ b/src/app/your-feed/components/your-feed/your-feed.component.html
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-9">
-        <app-feed-toggler [tagName]="'dragon'"></app-feed-toggler>
+        <app-feed-toggler></app-feed-toggler>
         <app-feed [apiUrl]="apiUrl"></app-feed>
       </div>
       <div class="col-md-3">
@@ -13,4 +13,5 @@
   </div>
 </div>
 
-test
+this is a test
+
